# GAMES101

./: .gitignore  CMakeLists.txt  README.md  make.sh
src/: BVH.cpp  Bounds3.hpp  Material.hpp  Ray.hpp  Renderer.cpp  Scene.cpp  Sphere.hpp  Texture.hpp  Triangle.hpp  main.cpp  rasterizer.cpp  rasterizer.hpp
